--- a/topic1.html
+++ b/topic1.html
@@ -2,14 +2,13 @@
 <html lang="en">
 
 <head>
-    <!-- Metadata and Page Setup -->
     <meta charset="UTF-8">
-    <title>HTML5 Research</title> <!-- Page title for this section -->
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external stylesheet -->
+    <title>HTML5 Research</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- Main Navigation Menu -->
+    <!-- Navigation -->
     <header>
         <nav>
             <ul>
@@ -22,39 +21,35 @@
         </nav>
     </header>
 
-    <!-- Main Content Section -->
+    <!-- Main Content -->
     <main>
         <h1>HTML5: The Foundation of Modern Web Development</h1>
 
-        <!-- Introduction Section -->
         <section>
             <h2>Introduction</h2>
-            <p>HTML5 is the latest version of HyperText Markup Language, offering new features for multimedia, accessibility, and web applications.</p>
+            <p>HTML5 is the latest version of HyperText Markup Language, offering features for multimedia, accessibility, and web applications.</p>
             <div class="image-container">
                 <img src="html5.jpg" alt="HTML5 Logo" class="resize-image">
             </div>
         </section>
 
-        <!-- History of HTML Section -->
         <section>
             <h2>History of HTML</h2>
-            <p>HTML was created by Tim Berners-Lee in 1991. Over time, it evolved from basic web formatting to the advanced capabilities in HTML5 today.</p>
+            <p>HTML was created by Tim Berners-Lee in 1991. It evolved from basic formatting to the modern capabilities of HTML5.</p>
         </section>
 
-        <!-- Key Features of HTML5 -->
         <section>
             <h2>Key Features of HTML5</h2>
             <ul>
-                <li>Semantic Elements: &lt;article&gt;, &lt;section&gt;, etc.</li>
-                <li>Native Multimedia Support: &lt;audio&gt; and &lt;video&gt; elements.</li>
-                <li>Enhanced Forms: New input types like &lt;email&gt; and &lt;date&gt;.</li>
+                <li>Semantic Elements: <code>&lt;article&gt;</code>, <code>&lt;section&gt;</code>, etc.</li>
+                <li>Native Multimedia: <code>&lt;audio&gt;</code> and <code>&lt;video&gt;</code> elements.</li>
+                <li>Enhanced Forms: Input types like <code>&lt;email&gt;</code> and <code>&lt;date&gt;</code>.</li>
                 <li>Offline Capabilities: Local storage and caching.</li>
             </ul>
         </section>
 
-        <!-- HTML vs. HTML5 Comparison Table -->
         <section>
-            <h2>HTML vs. HTML5 Features Comparison</h2>
+            <h2>HTML vs. HTML5 Comparison</h2>
             <table border="1">
                 <thead>
                     <tr>
@@ -67,11 +62,11 @@
                     <tr>
                         <td>Multimedia Support</td>
                         <td>Requires external plugins</td>
-                        <td>Native audio and video</td>
+                        <td>Native audio and video support</td>
                     </tr>
                     <tr>
                         <td>Semantic Markup</td>
-                        <td>Limited, uses div tags</td>
+                        <td>Mostly <code>&lt;div&gt;</code> tags</td>
                         <td>New semantic elements</td>
                     </tr>
                     <tr>
@@ -84,15 +79,11 @@
         </section>
     </main>
 
-    <!-- Footer Section -->
+    <!-- Footer -->
     <footer>
         <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
-
-        <!-- CSS Validation Badge -->
         <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
-            <img src="https://jigsaw.w3.org/css-validator/images/vcss" 
-                 alt="Valid CSS!" 
-                 style="border:0;width:88px;height:31px;">
+            <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" width="88" height="31" style="border:0;">
         </a>
     </footer>
 </body>
