--- a/topic2.html
+++ b/topic2.html
@@ -2,19 +2,17 @@
 <html lang="en">
 
 <head>
-    <!-- Metadata and Page Setup -->
-    <meta charset="UTF-8"> <!-- Character encoding to support special characters -->
-    <title>SEO Research</title> <!-- Page title displayed on the browser tab -->
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS for styling -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures responsive design on all devices -->
+    <meta charset="UTF-8">
+    <title>SEO Research</title>
+    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-    <!-- Main Navigation Menu -->
+    <!-- Navigation -->
     <header>
         <nav>
             <ul>
-                <!-- Navigation links for easy page access -->
                 <li><a href="index.html">Home</a></li>
                 <li><a href="topic1.html">HTML5 Research</a></li>
                 <li><a href="topic2.html">SEO Research</a></li>
@@ -24,88 +22,69 @@
         </nav>
     </header>
 
-    <!-- Main Content Section -->
+    <!-- Main Content -->
     <main>
         <h1>Search Engine Optimization (SEO) Overview</h1>
 
-        <!-- Introduction Section -->
         <section>
             <h2>What is SEO?</h2>
-            <p>Search Engine Optimization (SEO) refers to the practice of optimizing web content to improve its visibility and ranking on search engines like Google, Bing, and Yahoo.</p>
-            
-            <!-- Relevant Image -->
+            <p>SEO is the practice of optimizing web content to improve visibility and ranking in search engine results.</p>
             <div class="image-container">
                 <img src="seo.jpg" alt="SEO Process Illustration" class="resize-image">
             </div>
         </section>
 
-        <!-- Importance of SEO -->
         <section>
             <h2>Why is SEO Important?</h2>
-            <p>SEO is crucial because it helps websites rank higher in search engine results, increasing organic traffic, improving brand visibility, and enhancing user experience.</p>
             <ul>
-                <li>Increased Website Traffic: Higher rankings lead to more visitors.</li>
-                <li>Better User Experience: SEO emphasizes fast, accessible, and user-friendly websites.</li>
-                <li>Cost-Effective Marketing: Organic traffic is free compared to paid advertisements.</li>
+                <li><strong>Increased Traffic:</strong> Higher rankings bring more visitors.</li>
+                <li><strong>Better UX:</strong> SEO prioritizes speed, accessibility, and usability.</li>
+                <li><strong>Cost-Effective:</strong> Organic search is free compared to ads.</li>
             </ul>
         </section>
 
-        <!-- Types of SEO -->
         <section>
             <h2>Types of SEO Strategies</h2>
 
-            <!-- On-Page SEO -->
             <h3>1. On-Page SEO</h3>
-            <p>On-page SEO refers to optimizing content and HTML source code directly on your website.</p>
             <ul>
-                <li>Optimizing title tags, meta descriptions, and headings.</li>
-                <li>Improving content quality and keyword placement.</li>
-                <li>Ensuring proper internal linking structure.</li>
+                <li>Optimize titles, meta tags, and headers</li>
+                <li>Use relevant keywords naturally</li>
+                <li>Strong internal linking</li>
             </ul>
 
-            <!-- Off-Page SEO -->
             <h3>2. Off-Page SEO</h3>
-            <p>Off-page SEO focuses on actions taken outside your website to improve search rankings.</p>
             <ul>
-                <li>Building backlinks from reputable sources.</li>
-                <li>Engaging in social media marketing and online networking.</li>
-                <li>Guest posting on industry-related websites.</li>
+                <li>Build backlinks from trusted sources</li>
+                <li>Social media and guest blogging</li>
+                <li>Brand mentions and online reputation</li>
             </ul>
 
-            <!-- Technical SEO -->
             <h3>3. Technical SEO</h3>
-            <p>Technical SEO involves optimizing the backend of a website to enhance crawling and indexing by search engines.</p>
             <ul>
-                <li>Improving website speed and performance.</li>
-                <li>Ensuring mobile-friendliness and responsive design.</li>
-                <li>Implementing structured data and XML sitemaps.</li>
+                <li>Improve page load speed</li>
+                <li>Mobile-first design</li>
+                <li>Structured data, XML sitemaps</li>
             </ul>
         </section>
 
-        <!-- SEO Best Practices -->
         <section>
             <h2>SEO Best Practices</h2>
-            <p>Implementing these best practices ensures better search engine rankings and an improved user experience:</p>
             <ol>
-                <li>Use descriptive, keyword-rich URLs.</li>
-                <li>Optimize images with alt text and compression.</li>
-                <li>Ensure your website is mobile-friendly.</li>
-                <li>Create high-quality, engaging, and original content.</li>
-                <li>Regularly update and audit your website for errors.</li>
+                <li>Use descriptive, keyword-rich URLs</li>
+                <li>Compress and tag images with alt attributes</li>
+                <li>Make sure your site is mobile-friendly</li>
+                <li>Publish valuable, original content</li>
+                <li>Update content and fix broken links regularly</li>
             </ol>
         </section>
-
     </main>
 
-    <!-- Footer Section -->
+    <!-- Footer -->
     <footer>
         <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
-
-        <!-- CSS Validation Badge -->
         <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
-            <img src="https://jigsaw.w3.org/css-validator/images/vcss" 
-                 alt="Valid CSS!" 
-                 style="border:0;width:88px;height:31px;">
+            <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" width="88" height="31" style="border:0;">
         </a>
     </footer>
 </body>
