--- a/resources.html
+++ b/resources.html
@@ -15,11 +15,13 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="topic1.html">HTML5 Research</a></li>
                 <li><a href="topic2.html">SEO Research</a></li>
+                <li><a href="quiz.html">Quiz</a></li>
                 <li><a href="resources.html">References & Resources</a></li>
                 <li><a href="https://github.com/ajpalmer22/ajpalmer22.github.io" target="_blank">GitHub Repo</a></li>
             </ul>
         </nav>
     </header>
+    
 
     <!-- Main Content -->
     <main>
