--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="topic1.html">HTML5 Research</a></li>
                 <li><a href="topic2.html">SEO Research</a></li>
-                <li><a href="quiz.html">Quiz</a></li>
+                <li><a href="quiz.html">Quiz</a></li> <!-- Link to the quiz page -->
                 <li><a href="resources.html">References & Resources</a></li>
                 <li><a href="https://github.com/ajpalmer22/ajpalmer22.github.io" target="_blank">GitHub Repo</a></li>
             </ul>
         </nav>
     </header>
-    
 
     <!-- Main Content -->
     <main>
@@ -49,6 +48,8 @@
             <li><a href="topic1.html">HTML5</a></li>
             <li><a href="topic2.html">Search Engine Optimization</a></li>
             <li><a href="resources.html">References & Resources</a></li>
+            <!-- Added a link to the quiz section -->
+            <li><a href="quiz.html">Test your knowledge with our Quiz</a></li> <!-- Quiz link -->
         </ol>
 
         <img src="example.jpg" alt="Jeff The Shark Says Hi" width="400">
