--- a/quiz.html
+++ b/quiz.html
@@ -36,11 +36,15 @@
             <div id="result"></div>
         </section>
     </main>
-
-    <!-- Footer with copyright and link to home page -->
+    
+    <!-- Footer -->
     <footer>
-        <p>© 2025 Aaron Palmer | <a href="index.html" class="footer-link">Home</a></p>
+        <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
+            <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" width="88" height="31" style="border:0;">
+        </a>
     </footer>
+</body>
 
     <!-- Link to the external JavaScript file -->
     <script src="quiz.js"></script>
