--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
   <title>HTML5 & SEO Knowledge Quiz</title>
   <style>
     .top-banner {
-    background-color: #800020; /* Burgundy */
+    background-color: #440202; /* Burgundy */
     padding: 10px 0;
     text-align: center;
 }
@@ -86,12 +86,14 @@ body {
     <header>
         <div class="top-banner">
             <nav>
-                <a href="index.html">Home</a>
-                <a href="html5-research.html">HTML5 Research</a>
-                <a href="seo-research.html">SEO Research</a>
-                <a href="quiz.html">Quiz</a>
-                <a href="references.html">References & Resources</a>
-                <a href="https://github.com/yourusername" target="_blank">GitHub Repo</a>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="topic1.html">HTML5 Research</a></li>
+                    <li><a href="topic2.html">SEO Research</a></li>
+                    <li><a href="quiz.html">Quiz</a></li>
+                    <li><a href="resources.html">References & Resources</a></li>
+                    <li><a href="https://github.com/ajpalmer22/ajpalmer22.github.io" target="_blank">GitHub Repo</a></li>
+                </ul>
             </nav>
         </div>
     </header>
