Updated index and quiz files

--- a/index.html
+++ b/index.html
@@ -5,116 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aaron Palmer's Web Development Project</title>
   <link rel="stylesheet" href="styles.css">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f6f6f6;
-      color: #330000;
-      margin: 40px;
-    }
-
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 0.3em;
-    }
-
-    p {
-      font-size: 1.1em;
-      margin-top: 0;
-    }
-
-    a {
-      color: #b22222;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    .topics, .toc {
-      margin-top: 30px;
-    }
-
-    .topics h2, .toc h2 {
-      font-size: 1.5em;
-      border-bottom: 2px solid #330000;
-      padding-bottom: 5px;
-    }
-
-    ul, ol {
-      padding-left: 20px;
-      margin-top: 10px;
-    }
-
-    ul li {
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-
-    .toc ol li {
-      font-weight: normal;
-      margin-bottom: 8px;
-      color: #d23600;
-    }
-
-    .shark-img {
-      display: block;
-      margin: 30px auto;
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    }
-  </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="topic1.html">HTML5 Research</a></li>
-                <li><a href="topic2.html">SEO Research</a></li>
-                <li><a href="quiz.html">Quiz</a></li>
-                <li><a href="resources.html">References & Resources</a></li>
-                <li><a href="https://github.com/ajpalmer22/ajpalmer22.github.io" target="_blank">GitHub Repo</a></li>
-            </ul>
-        </nav>
-    </header>
-  <h1>Welcome to Aaron Palmer's Web Development Project</h1>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="topic1.html">HTML5 Research</a></li>
+        <li><a href="topic2.html">SEO Research</a></li>
+        <li><a href="quiz.html">Quiz</a></li>
+        <li><a href="resources.html">References & Resources</a></li>
+        <li><a href="https://github.com/ajpalmer22/ajpalmer22.github.io" target="_blank">GitHub Repo</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <p>This website explores HTML5 and Search Engine Optimization (SEO). It is hosted using GitHub Pages.</p>
-  <p>👉 <a href="https://github.com/your-repo-link" target="_blank">Here is the GitHub Repo for this site.</a></p>
+  <main>
+    <h1>Welcome to Aaron Palmer's Web Development Project</h1>
+    <p>This website explores HTML5 and Search Engine Optimization (SEO). It is hosted using GitHub Pages.</p>
+    <p>👉 <a href="https://github.com/your-repo-link" target="_blank">Here is the GitHub Repo for this site.</a></p>
 
-  <div class="topics">
-    <h2>Topics Covered</h2>
-    <ul>
-      <li><strong>HTML5</strong></li>
-      <li><strong>Search Engine Optimization</strong></li>
-      <li><strong>References & Resources</strong></li>
-    </ul>
-  </div>
+    <div class="topics">
+      <h2>Topics Covered</h2>
+      <ul>
+        <li><strong>HTML5</strong></li>
+        <li><strong>Search Engine Optimization</strong></li>
+        <li><strong>References & Resources</strong></li>
+      </ul>
+    </div>
 
-  <div class="toc">
-    <h2>Table of Contents</h2>
-    <ol>
-      <li><a href="#html5">HTML5</a></li>
-      <li><a href="#seo">Search Engine Optimization</a></li>
-      <li><a href="#references">References & Resources</a></li>
-      <li><a href="quiz.html">Test your knowledge with our Quiz</a></li>
-    </ol>
-  </div>
+    <div class="toc">
+      <h2>Table of Contents</h2>
+      <ol>
+        <li><a href="#html5">HTML5</a></li>
+        <li><a href="#seo">Search Engine Optimization</a></li>
+        <li><a href="#references">References & Resources</a></li>
+        <li><a href="quiz.html">Test your knowledge with our Quiz</a></li>
+      </ol>
+    </div>
 
-        <img src="example.jpg" alt="Jeff The Shark Says Hi" width="400">
-    </main>
+    <img src="example.jpg" alt="Jeff The Shark Says Hi" width="400" class="shark-img">
+  </main>
 
-    <!-- Footer -->
-    <footer>
-        <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
-            <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" width="88" height="31" style="border:0;">
-        </a>
-    </footer>
+  <footer>
+    <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
+      <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" width="88" height="31" style="border:0;">
+    </a>
+  </footer>
 </body>
-
 </html>
