--- a/quiz.html
+++ b/quiz.html
@@ -29,5 +29,12 @@
   </main>
 
   <script src="quiz.js"></script>
+   <!-- Footer -->
+   <footer>
+    <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
+        <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" width="88" height="31" style="border:0;">
+    </a>
+</footer>
 </body>
 </html>
