--- a/resources.html
+++ b/resources.html
@@ -33,7 +33,7 @@
             <li><a href="https://developers.google.com/search/docs/fundamentals/seo-starter-guide" target="_blank">Google SEO Starter Guide</a></li>
             <li><a href="https://www.geeksforgeeks.org/search-engine-optimization-seo-basics/"target="_blank">Search Engine Optimization</a></li>
             <li><a href="https://www.w3docs.com/learn-html%20/audio-and-video-in-html5.html" target="_blank">HTML 5 Audio & Video</a></li>
-            <li><a href="https://www.geeksforgeeks.org/how-to-create-a-simple-javascript-quiz/" target="_blank">GeeksForGeeks - Javascript Quiz Tutorial</a></li>
+            <li><a href="https://www.geeksforgeeks.org/how-to-create-a-simple-javascript-quiz/" target="_blank">Javascript Quiz Tutorial</a></li>
             <li><a href="https://jackwestin.com/resources/mcat-content/perception" target="_blank">Jack Westin Perception - CSS Styling Inspiration</a></li>
         </ul>
     </main>
