updated quiz and added comments

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+     <!-- Navigation -->
   <header>
     <nav>
       <ul>
@@ -19,7 +20,7 @@
       </ul>
     </nav>
   </header>
-
+<!-- Main Content-->
   <main>
     <h1>Welcome to Aaron Palmer's Web Development Project</h1>
     <p>This website explores HTML5 and Search Engine Optimization (SEO). It is hosted using GitHub Pages.</p>
@@ -46,7 +47,7 @@
 
     <img src="example.jpg" alt="Jeff The Shark Says Hi" width="400" class="shark-img">
   </main>
-
+<!--Footer -->
   <footer>
     <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
     <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
