--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <div class="toc">
       <h2>Table of Contents</h2>
       <ol>
-        <li><a href="#html5">HTML5</a></li>
-        <li><a href="#seo">Search Engine Optimization</a></li>
-        <li><a href="#references">References & Resources</a></li>
+        <li><a href="topic1.html">HTML5</a></li>
+        <li><a href="topic2.html">Search Engine Optimization</a></li>
+        <li><a href="resources.html">References & Resources</a></li>
         <li><a href="quiz.html">Test your knowledge with our Quiz</a></li>
       </ol>
     </div>
