--- a/resources.html
+++ b/resources.html
@@ -35,6 +35,7 @@
             <li><a href="https://www.w3docs.com/learn-html%20/audio-and-video-in-html5.html" target="_blank">HTML 5 Audio & Video</a></li>
             <li><a href="https://www.geeksforgeeks.org/how-to-create-a-simple-javascript-quiz/" target="_blank">Javascript Quiz Tutorial</a></li>
             <li><a href="https://jackwestin.com/resources/mcat-content/perception" target="_blank">Jack Westin Perception - CSS Styling Inspiration</a></li>
+            <li><a href="https://stackoverflow.com/questions/62650410/adding-a-reset-button-in-javascript" target="_blank">Reset Button</a></li>
         </ul>
     </main>
 
